{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 70,
  "lineage": "52824215-341b-aaf4-30fb-f666ca163744",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "recipes_host",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d1dcfb793f6fa37",
            "arn": "arn:aws:ec2:us-west-1:952122846739:instance/i-09cf4bedb3590c3cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cf4bedb3590c3cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPairForGJInstance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064aebd9418ba2784",
            "private_dns": "ip-172-31-200-109.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.200.109",
            "public_dns": "ec2-184-169-227-13.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.227.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ba308315d35f7b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "recipes_host_sec_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa865e7d63f40b05",
            "tags": {
              "Name": "RecipesHost",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tags_all": {
              "Name": "RecipesHost",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d41bbfc8682bdd4"
            ]
          },
          "dependencies": [
            "module.routing.aws_security_group.recipes_host_sec_group",
            "module.routing.aws_subnet.recipes_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "recipes_sql_server",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d1dcfb793f6fa37",
            "arn": "arn:aws:ec2:us-west-1:952122846739:instance/i-0522d0adc92dd0358",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0522d0adc92dd0358",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPairForGJInstance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055a5e0cadc08dc26",
            "private_dns": "ip-172-31-200-169.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.200.169",
            "public_dns": "ec2-54-183-201-251.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.201.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083bff02fa8caa2d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "recipes_sql_sec_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa865e7d63f40b05",
            "tags": {
              "Name": "RecipesMySQL",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tags_all": {
              "Name": "RecipesMySQL",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ceeb2da1190e4c46"
            ]
          },
          "dependencies": [
            "module.routing.aws_security_group.recipes_sql_sec_group",
            "module.routing.aws_subnet.recipes_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "recipes_host_sec_group",
      "provider": "module.routing.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:952122846739:security-group/sg-04d41bbfc8682bdd4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d41bbfc8682bdd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "recipes_host_sec_group",
            "name_prefix": "",
            "owner_id": "952122846739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RecipesHostSecGroup",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tags_all": {
              "Name": "RecipesHostSecGroup",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f488eb699cfd3961"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "recipes_sql_sec_group",
      "provider": "module.routing.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:952122846739:security-group/sg-0ceeb2da1190e4c46",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ceeb2da1190e4c46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "recipes_sql_sec_group",
            "name_prefix": "",
            "owner_id": "952122846739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RecipesSqlSecGroup",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tags_all": {
              "Name": "RecipesSqlSecGroup",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f488eb699cfd3961"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "recipes_subnet",
      "provider": "module.routing.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:952122846739:subnet/subnet-0fa865e7d63f40b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.31.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa865e7d63f40b05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952122846739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RecipesSubnet",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "tags_all": {
              "Name": "RecipesSubnet",
              "Owner": "GenadijsJ",
              "Project": "Recipes"
            },
            "vpc_id": "vpc-0f488eb699cfd3961"
          }
        }
      ]
    }
  ]
}